--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -4,6 +4,8 @@
 // Color Variables
 // Bootstrap Color Overrides
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
 $white: #fff !default;
 $gray-100: #f8f9fc !default;
 $gray-200: #eaecf4 !default;
@@ -37,7 +39,7 @@ $yiq-contrasted-threshold: 195 !default;
 // Typography
 $body-color: $gray-600 !default;
 
-$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
+$font-family-sans-serif: font-family: 'Roboto', sans-serif !default;
 
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
