update font family

--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -39,7 +39,7 @@ $yiq-contrasted-threshold: 195 !default;
 // Typography
 $body-color: $gray-600 !default;
 
-$font-family-sans-serif: font-family: 'Roboto', sans-serif !default;
+$font-family-sans-serif: 'Roboto', sans-serif !default;
 
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
