--- a/assets/stylesheets/sb_admin_2.scss
+++ b/assets/stylesheets/sb_admin_2.scss
@@ -2,8 +2,7 @@
 *= require dataTables.bootstrap4.min
 */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
-
+// Override Bootstrap default variables here
 $white: #fff !default;
 $gray-100: #f8f9fc !default;
 $gray-200: #eaecf4 !default;
@@ -36,8 +35,9 @@ $yiq-contrasted-threshold: 195 !default;
 
 // Typography
 $body-color: $gray-600 !default;
-$font-family-sans-serif: 'Roboto', sans-serif !default;
-$font-size-base: 0.9rem;
+
+$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
+
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
 $headings-font-weight: 400 !default;
@@ -80,9 +80,6 @@ $dropdown-border-color: $border-color;
 // Import Font Awesome
 @import "font-awesome-sprockets";
 @import "font-awesome";
-
-// Import Custom SB Admin 2 Variables (Overrides Default Bootstrap Variables)
-@import "variables.scss";
 
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
